# jinput

./: .gitignore  CMakeLists.txt  SConstruct  build.bat
project/: jinput.tscn  new_j_input_action.tres  project.godot
src/: register_types.cpp  register_types.h
src/Core/: jinput_action.cpp  jinput_action.h
src/Editor/: jinput_action_inspector.cpp  jinput_action_inspector.h  jinput_action_resource.cpp  jinput_action_resource.h  jinput_action_window.cpp  jinput_action_window.h  jinput_editor.cpp  jinput_editor.h
